--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -2482,7 +2482,7 @@
             "label": "Small"
           },
           "options__3": {
-            "label": "Medium"
+            "label": "Large"
           }
         },
         "desktop_layout": {
