--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -1585,17 +1585,17 @@
           }
         },
         "collapsible_tab": {
-          "name": "Collapsible tab",
+          "name": "Collapsible row",
           "settings": {
             "heading": {
               "info": "Include a heading that explains the content.",
               "label": "Heading"
             },
             "content": {
-              "label": "Tab content"
+              "label": "Row content"
             },
             "page": {
-              "label": "Tab content from page"
+              "label": "Row content from page"
             },
             "icon": {
               "label": "Icon",
@@ -2505,7 +2505,7 @@
               "label": "Heading"
             },
             "row_content": {
-              "label": "Tab content"
+              "label": "Row content"
             },
             "page": {
               "label": "Row content from page"
