--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -2434,16 +2434,16 @@
             "label": "Left"
           }
         },
-        "secondary_background": {
-          "label": "Secondary background",
+        "layout": {
+          "label": "Layout",
           "options__1": {
-            "label": "None"
+            "label": "No container"
           },
           "options__2": {
-            "label": "On rows"
+            "label": "Row container"
           },
           "options__3": {
-            "label": "On section"
+            "label": "Section container"
           }
         },
         "color_scheme": {
@@ -2493,7 +2493,7 @@
           "options__2": {
             "label": "Image first"
           },
-          "info": "Image is always first on mobile"
+          "info": "Image is always first on mobile."
         }
       },
       "blocks": {
