--- a/locales/cs.schema.json
+++ b/locales/cs.schema.json
@@ -2427,7 +2427,16 @@
           "label": "Nadpis"
         },
         "heading_alignment": {
-          "label": "Zarovnání nadpisu"
+          "label": "Zarovnání nadpisu",
+          "options__1": {
+            "label": "Doleva"
+          },
+          "options__2": {
+            "label": "Na střed"
+          },
+          "options__3": {
+            "label": "Doprava"
+          }
         },
         "layout": {
           "label": "Rozvržení",
@@ -2489,6 +2498,24 @@
             "label": "Obrázek jako první"
           },
           "info": "Obrázek je v mobilním prostředí vždy první."
+        },
+        "container_color_scheme": {
+          "label": "Barevné schéma kontejneru",
+          "options__1": {
+            "label": "Pozadí 1"
+          },
+          "options__2": {
+            "label": "Pozadí 2"
+          },
+          "options__3": {
+            "label": "Inverze"
+          },
+          "options__4": {
+            "label": "Zvýraznění 1"
+          },
+          "options__5": {
+            "label": "Zvýraznění 2"
+          }
         }
       },
       "blocks": {
