--- a/locales/pl.schema.json
+++ b/locales/pl.schema.json
@@ -2430,7 +2430,16 @@
           "label": "Nagłówek"
         },
         "heading_alignment": {
-          "label": "Wyrównanie nagłówka"
+          "label": "Wyrównanie nagłówka",
+          "options__1": {
+            "label": "Lewa strona"
+          },
+          "options__2": {
+            "label": "Środek"
+          },
+          "options__3": {
+            "label": "Prawa strona"
+          }
         },
         "layout": {
           "label": "Układ",
@@ -2492,6 +2501,24 @@
             "label": "Najpierw obraz"
           },
           "info": "Obraz pojawia się zawsze pierwszy na urządzeniu mobilnym."
+        },
+        "container_color_scheme": {
+          "label": "Schemat kolorów kontenera",
+          "options__1": {
+            "label": "Tło 1"
+          },
+          "options__2": {
+            "label": "Tło 2"
+          },
+          "options__3": {
+            "label": "Odwrócone"
+          },
+          "options__4": {
+            "label": "Akcent 1"
+          },
+          "options__5": {
+            "label": "Akcent 2"
+          }
         }
       },
       "blocks": {
