--- a/locales/ja.schema.json
+++ b/locales/ja.schema.json
@@ -2607,7 +2607,8 @@
           },
           "options__5": {
             "label": "アクセント2"
-          }
+          },
+          "info": "レイアウトが行またはセクションのコンテナーに設定されている場合に表示されます。"
         }
       },
       "blocks": {
