--- a/locales/cs.schema.json
+++ b/locales/cs.schema.json
@@ -2515,7 +2515,8 @@
           },
           "options__5": {
             "label": "Zvýraznění 2"
-          }
+          },
+          "info": "Zobrazí se v případě, že je rozvržení nastaveno na kontejner řádků nebo sekcí."
         }
       },
       "blocks": {
