--- a/locales/de.schema.json
+++ b/locales/de.schema.json
@@ -2519,7 +2519,8 @@
           },
           "options__5": {
             "label": "Akzent 2"
-          }
+          },
+          "info": "Wird angezeigt, wenn für das Layout Zeilen- oder Abschnitts-Container festgelegt wird."
         }
       },
       "blocks": {
