--- a/locales/fi.schema.json
+++ b/locales/fi.schema.json
@@ -2517,7 +2517,8 @@
           },
           "options__5": {
             "label": "Korostus 2"
-          }
+          },
+          "info": "Näkyy, kun asetteluna on rivi- tai osiosäiliö."
         }
       },
       "blocks": {
