--- a/locales/fr.schema.json
+++ b/locales/fr.schema.json
@@ -2485,7 +2485,8 @@
           },
           "options__5": {
             "label": "Accent 2"
-          }
+          },
+          "info": "Visible lorsque la Mise en page est définie comme conteneur de Ligne ou de Section."
         },
         "open_first_collapsible_row": {
           "label": "Ouvrir d'abord la rangée réductible"
