--- a/locales/th.schema.json
+++ b/locales/th.schema.json
@@ -2607,7 +2607,8 @@
           },
           "options__5": {
             "label": "ส่วนเน้น 2"
-          }
+          },
+          "info": "ปรากฏให้เห็นเมื่อตั้งค่าเลย์เอาต์เป็นคอนเทนเนอร์แถวหรือส่วน"
         }
       },
       "blocks": {
