--- a/locales/zh-CN.schema.json
+++ b/locales/zh-CN.schema.json
@@ -2607,7 +2607,8 @@
           },
           "options__5": {
             "label": "强调色 2"
-          }
+          },
+          "info": "在将“布局”设置为“行”或“分区”容器时可见。"
         }
       },
       "blocks": {
