--- a/locales/nb.schema.json
+++ b/locales/nb.schema.json
@@ -2484,7 +2484,8 @@
           },
           "options__5": {
             "label": "Aksent 2"
-          }
+          },
+          "info": "Synlig når layouten er satt til rad- eller seksjonsbeholder."
         },
         "open_first_collapsible_row": {
           "label": "Åpne første sammenleggbare rad"
